# panelreels

./: .drone.yml  .gitignore  CMakeLists.txt  Makefile  README  README.md  fade.c  ncursesinc.h
debian/: README.Debian  README.source  changelog  control  copyright  liboutcurses-dev.install  rules  shlibs.local  watch
doc/: release-checklist.md
include/: colors.h  outcurses.h  panelreel.h
src/: fade.c  outcurses.c
src/lib/: colors.c  enmetric.c  fade.c  ffmpeg.c  outcurses.c  panelreel.c  panelwheel.c  version.c
tests/: enmetric.cpp  fade.cpp  main.cpp  main.h  ncursesw.cpp  outcurses.cpp  panelreel.cpp  panelwheel.cpp  prefix.cpp
tools/: OutcursesConfig.cmake.in  outcurses.pc.cmakein  outcurses.pc.in  version.h.in
